--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Is it coffee time?</title>
+    <title>Está na hora do café?</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
-        <h1>Is it coffee time?</h1>
-        <p id="answer">Loading...</p>
-        <img id="coffee-image" src="assets/coffee-time.gif" alt="Coffee time!">
-        <button id="timer-button">Start 4-minute coffee timer</button>
-        <p id="fun-fact">Did you know? Coffee was discovered by goats!</p>
+        <h1>Está na hora do café?</h1>
+        <p id="answer">Carregando...</p>
+        <img id="coffee-image" src="assets/coffee-time.gif" alt="Hora do café!">
+        <button id="timer-button">Iniciar timer de 4 minutos</button>
+        <p id="fun-fact">Sabia? O café foi descoberto por cabras na Etiópia!</p>
     </div>
     <script src="script.js"></script>
 </body>
