--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </div>
     </div>
     <footer>
-        <p>Feito com ☕️ por [Seu Nome]</p>
+        <p>Feito com ☕️ por Juan C.</p>
     </footer>
     <script src="script.js"></script>
 </body>
